@startuml
title Jack - Core Domain with Builder, Iterator & Persistence

skinparam classAttributeIconSize 0

note as N1
  **Design Patterns:**
  1. Builder - MeetingRecordBuilder
  2. Iterator - MeetingRecordIterator

  **Feature: Persistent Meeting History**
  MeetingStorage provides JSON persistence
  using Jackson for serialization.
end note

package "EchoNote.Jack" {

    ' Builder Pattern
    class MeetingRecordBuilder <<Builder>> {
        - record : MeetingRecord
        - tags : List<String>
        - participants : List<Participant>
        - actions : List<ActionItem>
        --
        + MeetingRecordBuilder()
        + withTitle(title : String) : MeetingRecordBuilder
        + withTags(tags : List<String>) : MeetingRecordBuilder
        + withDate(date : LocalDateTime) : MeetingRecordBuilder
        + withParticipants(participants : List<Participant>) : MeetingRecordBuilder
        + withTranscript(transcript : Transcript) : MeetingRecordBuilder
        + withSummary(summary : Summary) : MeetingRecordBuilder
        + withActions(actions : List<ActionItem>) : MeetingRecordBuilder
        + build() : MeetingRecord
    }

    ' Iterator Pattern
    class MeetingRecordCollection <<Aggregate>> {
        - records : List<MeetingRecord>
        --
        + add(record : MeetingRecord) : void
        + size() : int
        + iterator() : Iterator<MeetingRecord>
        + approvedIterator() : Iterator<MeetingRecord>
        + iteratorByTag(tag : String) : Iterator<MeetingRecord>
        + iteratorByTitle(searchTerm : String) : Iterator<MeetingRecord>
        + iteratorWithFilter(filter : Predicate) : Iterator<MeetingRecord>
    }

    class MeetingRecordIterator <<Iterator>> {
        - records : List<MeetingRecord>
        - filter : Predicate<MeetingRecord>
        - currentIndex : int
        --
        + hasNext() : boolean
        + next() : MeetingRecord
        + {static} approvedOnly(records) : MeetingRecordIterator
        + {static} byTag(records, tag) : MeetingRecordIterator
        + {static} byTitleContaining(records, term) : MeetingRecordIterator
    }

    ' Persistence Feature
    class MeetingStorage {
        - storageFile : File
        - objectMapper : ObjectMapper
        --
        + MeetingStorage()
        + MeetingStorage(storageFile : File)
        + save(records : List<MeetingRecord>) : void
        + load() : List<MeetingRecord>
        + clearHistory() : boolean
        + hasStoredData() : boolean
        + getStorageFile() : File
    }

    class MeetingRecordDto {
        - id : UUID
        - title : String
        - tags : List<String>
        - date : LocalDateTime
        - status : ApprovalStatus
        - participants : List<Participant>
        - transcript : Transcript
        - summary : Summary
        - actions : List<ActionItem>
        --
        + {static} fromMeetingRecord(record : MeetingRecord) : MeetingRecordDto
        + toMeetingRecord() : MeetingRecord
    }

    class StorageException {
        + StorageException(message : String)
        + StorageException(message : String, cause : Throwable)
    }

    ' Core Domain
    class Workspace {
        - records : List<MeetingRecord>
        - storage : MeetingStorage
        --
        + Workspace()
        + Workspace(storage : MeetingStorage)
        + save(record : MeetingRecord) : void
        + findByQuery(query : String) : List<MeetingRecord>
        + getById(id : UUID) : MeetingRecord
        + getAll() : List<MeetingRecord>
    }

    class MeetingRecord <<Product>> {
        - id : UUID
        - title : String
        - tags : List<String>
        - date : LocalDateTime
        - status : ApprovalStatus
        - participants : List<Participant>
        - transcript : Transcript
        - summary : Summary
        - actions : List<ActionItem>
        --
        + getId() : UUID
        + getTitle() : String
        + isApproved() : boolean
    }

    class Participant {
        - name : String
        - email : String
        - role : String
    }

    class Transcript {
        - id : String
        - rawText : String
        - timestamps : List<String>
        - source : TranscriptSource
    }

    class Summary {
        - id : String
        - topics : List<String>
        - decisions : List<String>
        - notes : String
    }

    class ActionItem {
        - id : String
        - description : String
        - owner : Participant
        - dueDate : LocalDate
        - status : ActionStatus
    }

    enum ApprovalStatus {
        DRAFT
        PENDING
        APPROVED
        REJECTED
    }

    enum TranscriptSource {
        LIVE
        IMPORTED
    }

    enum ActionStatus {
        OPEN
        IN_PROGRESS
        COMPLETED
    }

    enum ExportFormat
    enum ExportDestination
    class ExportResult

    class InvalidEmailException
    class RecordNotFoundException

    ' Formatting Utility
    class MeetingFormatter <<Utility>> {
        + {static} formatSummaryAsText(summary : Summary) : String
        + {static} formatActionsAsText(actions : List<ActionItem>) : String
        + {static} formatActionItemAsText(action : ActionItem) : String
        + {static} getTitleOrDefault(record : MeetingRecord) : String
        + {static} getTitleOrId(record : MeetingRecord) : String
    }
}

' Builder
MeetingRecordBuilder --> MeetingRecord : <<builds>>
MeetingRecordBuilder ..> Participant : uses
MeetingRecordBuilder ..> Transcript : uses
MeetingRecordBuilder ..> Summary : uses
MeetingRecordBuilder ..> ActionItem : uses

' Iterator
MeetingRecordCollection ..|> java.lang.Iterable
MeetingRecordCollection --> MeetingRecordIterator : <<creates>>
MeetingRecordCollection o-- "*" MeetingRecord
MeetingRecordIterator ..|> java.util.Iterator
MeetingRecordIterator --> MeetingRecord : <<traverses>>

' Persistence
MeetingStorage --> MeetingRecordDto : serializes
MeetingStorage --> StorageException : throws
MeetingRecordDto --> MeetingRecord : <<converts>>
MeetingRecordDto ..> Participant
MeetingRecordDto ..> Transcript
MeetingRecordDto ..> Summary
MeetingRecordDto ..> ActionItem
Workspace --> MeetingStorage : uses

' Domain
Workspace "1" o-- "*" MeetingRecord
MeetingRecord "1" o-- "*" Participant
MeetingRecord "1" o-- "*" ActionItem
MeetingRecord "1" o-- "0..1" Transcript
MeetingRecord "1" o-- "0..1" Summary
MeetingRecord --> ApprovalStatus
Transcript --> TranscriptSource
ActionItem --> ActionStatus
ActionItem --> Participant

ExportResult --> MeetingRecord
ExportResult --> ExportFormat
ExportResult --> ExportDestination

' MeetingFormatter Utility
MeetingFormatter --> Summary : formats
MeetingFormatter --> ActionItem : formats
MeetingFormatter --> MeetingRecord : reads

@enduml
